--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="processing.min.js"></script>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<title>Brick Pixel Editor</title>
+	<meta name="viewport" content="user-scalable=no, width=device-width">
+	<script src="processing.min.js" type="text/javascript"></script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -16,15 +19,12 @@
 		   font-weight: 300;
 		}
 	</style>
-	<title>Brick Pixel Editor</title>
 </head>
 
-<body>
-
-<div style="width: 600px; margin: 0 auto;">
-<h1 style="text-align: center;">Brick Pixel Editor</h1>
-<canvas width="600" height="600" data-processing-sources="pixeleditor.js"></canvas>
-</div>
-
+<body style="margin: 0">
+	<center>
+	<h1>Brick Pixel Editor</h1>
+	<canvas width="600" height="600" data-processing-sources="pixeleditor.js"></canvas>
+	</center>
 </body>
 </html>
