--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<title>Brick Pixel Editor</title>
+	<title>Pixel Brick Plate Designer</title>
 	<meta name="viewport" content="user-scalable=no, width=device-width">
 	<script src="processing.min.js" type="text/javascript"></script>
 	<script>
@@ -55,7 +55,7 @@
 
 <body>
 	<div id="content">
-	<h1>Brick Pixel Editor</h1>
+	<h1>Pixel Brick Plate Designer</h1>
 	<canvas width="600" height="600" data-processing-sources="pixeleditor.js"></canvas>
 	<div id="readme">
 		<p>
