Add contact info

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		<p>
 		The color palette contains only the colors of pixel bricks sold by Brick Brick Gear, so you know you can create IRL whatever designs you make here. The counter on each color keeps track of how many bricks of that color you've laid down. That way, you'll always know if you have enough to make the design or if it's time to order more pixels bricks. I am working on making this thing mobile friendly, so you can create with your favorite devices on the go. For now, Brick Pixel Editor is best experienced on a computer. Click or click-and-drag to lay down some bricks!
 		<p>
-		If you find this tool useful, I would love to hear from you and get any feedback you'd be willing to share.
+		If you find this tool useful, I would love to hear from you and get any feedback you have <a href="https://twitter.com/Easy_E">@Easy_E</a>
 		<p>
 		The code for this editor is open-sourced under the MIT license. Check it out here:<br>
 		<a href="https://github.com/ericdlaspe/brick-pixel-editor">https://github.com/ericdlaspe/brick-pixel-editor</a>
